--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,7 @@ Package: clap
 Type: Package
 Title: Detecting Class Overlapping Regions in Multidimensional Data
 Version: 0.1.0
-Author: Priyanga Dilini Talagala
-Authors@R: c( person("Priyanga Dilini", "Talagala", email= "pritalagala@gmail.com", role= c("aut", "cre", "cph"),  comment = c(ORCID = "0000-0003-2870-7449")))
+Authors@R: c(person(given = "Priyanga Dilini", family = "Talagala", email= "pritalagala@gmail.com", role= c("aut", "cre", "cph"),  comment = c(ORCID = "0000-0003-2870-7449")))
 Description: The issue of overlapping regions in multidimensional data arises when different classes or clusters share similar feature representations, making it challenging to delineate distinct boundaries between them accurately. This package provides methods for detecting and visualizing these overlapping regions using partitional clustering techniques based on nearest neighbor distances.
 License: GPL-3
 Encoding: UTF-8
@@ -16,3 +15,5 @@ Imports:
 Suggests:
     ggplot2
 RoxygenNote: 7.3.1
+URL: https://github.com/pridiltal/clap
+BugReports: https://github.com/pridiltal/clap/issues
